--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,28 @@
     <string name="asistencias">Asistencias</string>
     <string name="nivel_de_conocimiento">Nivel de conocimiento</string>
     <string name="control_parental">Control parental</string>
+    <string name="textTitle">Añadir alumno</string>
+    <string name="textTitleCambiarContraseña">Cambiar contraseña</string>
+    <string name="textViewAñadirAlumno">Ingresar nombre del alumno:</string>
+    <string name="textViewIngresarContraseña">Ingresar contraseña:</string>
+    <string name="textViewIngresarNuevaContraseña">Ingresar nueva contraseña:</string>
+    <string name="textViewIngresarConfirmarNuevaContraseña">Confirmar nueva contraseña:</string>
+    <string name="textViewAñadirApPaterno">Ingresar contraseña:</string>
+    <string name="textViewAñadirApMaterno">Ingresar apellido materno del alumno:</string>
+    <string name="textViewAñadirGrupoAlumno">Ingresar grupo alumno:</string>
+    <string name="textButton">Ingresar</string>
+    <string name="textButtonHecho">Hecho</string>
+    <string name="textTitleContacto">Contacto: </string>
+    <string name="textViewCorreoGmail">ayudaEHL@gmail.com</string>
+    <string name="textViewCorreoSec">hola@newsec.tech</string>
+    <string name="textTitleCambiarContraseñaAlumno">Cambiar contraseña</string>
+    <string name="textViewIngresarContraseñaAlumno">Ingresar contraseña:</string>
+    <string name="textViewIngresarNuevaContraseñaAlumno">Ingresar nueva contraseña:</string>
+    <string name="textViewIngresarConfirmarNuevaContraseñaAlumno">Confirmar nueva contraseña:</string>
+    <string name="textViewSacarFoto">Sacar una foto</string>
+    <string name="textViewAdjuntarArchivo">Adjuntar archivo</string>
+    <string name="textTitleAñadirPregunta">Añadir pregunta a CQuiz</string>
+    <string name="textViewIngresaNuevaPregunta">Ingresa nueva pregunta</string>
+    <string name="textViewIngresaRespuesta">Ingresa la respuesta</string>
+    <string name="textButtonAñadir">Añadir pregunta</string>
 </resources>
