--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
             -->
 
 
-    <string name="ip_connection">192.168.50.22:3000</string>
+    <string name="ip_connection">peaceful-cliffs-36277.herokuapp.com</string>
     <string-array name="gruposlocal">
         <item>Grupo 1</item>
         <item>Grupo 2</item>
